<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="270dp"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/SignUp"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="320dp"
        android:layout_height="330dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/bg_from_singin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp">

        <EditText
            android:id="@+id/editTxtNameSignUp"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_user"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:paddingBottom="20dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTxtEmailSignUp"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtNameSignUp" />

        <EditText
            android:id="@+id/editTxtCmPassSignUp"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/CMPassword"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPassSignUp" />

        <EditText
            android:id="@+id/editTxtPassSignUp"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_key"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtEmailSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:background="@drawable/bg_signin_btn"
        android:text="@string/SignUp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>